# reef-of-the-lost-diver

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  GRK tematy 2026.md  README.md  TASKS.md  TIMELINE.md  UnderwaterScene.sln
UnderwaterScene/: .gitignore  BUILD.md  CMakeLists.txt  UnderwaterScene.vcxproj  UnderwaterScene.vcxproj.filters  imgui.ini
UnderwaterScene/scripts/: generate_normal_maps.py  generate_pbr_textures.py
UnderwaterScene/shaders/: debug_line.frag  debug_line.vert  particle.frag  pbr.frag  postprocess.frag  postprocess.vert  shadow_depth.frag  shadow_depth.vert  sketchfish.vert  skinned.vert  skybox.frag  skybox.vert
UnderwaterScene/src/: AnimatedModel.cpp  FishAnimation.cpp  FishAnimation.h  QuaternionCamera.h  Render_Utils.cpp  Shader_Loader.h  Spline.cpp  Spline.h  main.cpp  scene_underwater.hpp
shaders/: fish.vert  jellyfish.vert  particle.vert  pbr.vert  seaweed.vert  underwater.frag  underwater.vert  water_overlay.frag  water_overlay.vert
src/: AnimatedModel.cpp  AnimatedModel.h  FishAnimation.h  ParticleSystem.h  Render_Utils.cpp  Render_Utils.h  Shader_Loader.cpp  main.cpp  scene_underwater.hpp
